<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/acct_act_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?listBackground"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:cursorVisible="true"
            android:hint="@string/account_setup_example_email_address"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/edtCube7Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:cursorVisible="true"
            android:hint="name@bonofa.com"
            android:visibility="gone"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <info.guardianproject.otr.app.im.ui.InstantAutoCompleteTextView
            android:id="@+id/spinnerDomains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:drawSelectorOnTop="true"
            android:hint="@string/select_domain_new_account"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_setup_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/edtPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_setup_password_confirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/btn_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="3dip"
            android:background="@drawable/btn_green"
            android:text="@string/sign_in" />
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:orientation="vertical" >
        </LinearLayout>

        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="3sp"
            android:paddingTop="3sp"
            android:text="@string/remember_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/useTor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3sp"
            android:paddingTop="3sp"
            android:text="@string/use_tor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/account_setup_advanced_button" />

        <Button
            android:id="@+id/btnQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:text="@string/menu_sidebar_qr"
            android:visibility="gone" />

        <!--
	    <TextView android:id="@+id/signUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="4dip"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        -->

    </LinearLayout>

</ScrollView>